--- a/include/product-list.scss
+++ b/include/product-list.scss
@@ -131,7 +131,7 @@
 
     .ems-prd-button {flex-basis: 300px; position: relative; visibility: visible; opacity: 1; margin-top: 0px; box-sizing: border-box; padding-left: 45px;
 
-        .urunListe_sepetGrup {display: flex $i; justify-content: space-between; align-items: center;}
+        .urunListe_sepetGrup {display: flex; justify-content: space-between; align-items: center;}
     
         input {width: 42px; height: 27px; text-align: center; background-color: transparent; border-radius: 4px; border-color: $color-5; color: $color-9; font-weight: 600;}
 
@@ -165,7 +165,7 @@
 
         li {
 
-            > a {display: inline-block; line-height: 2.5;}
+            > a {display: inline-block; line-height: 2.5; color: $color-9;}
 
             > span {display: none;}
 
@@ -173,13 +173,19 @@
 
         .s1 {
 
-            > a {font-size: 18px; font-weight: bold; color: $color-9;}
+            > a {font-size: 18px; font-weight: bold; text-transform: uppercase;}
 
         }
 
         .s2 {
 
-            > a {font-size: 15px; font-weight: bold; color: $color-9;}
+            > a {font-size: 15px; font-weight: bold;}
+
+        }
+
+        .s3 {
+
+            > a {font-size: 14px; font-weight: 600;}
 
         }
 
@@ -204,6 +210,8 @@
                  &::after {content: '\e805';}
 
             }
+
+            &.s2 > ul {padding-left: 10px;}
 
         }
 
@@ -246,7 +254,6 @@
     .filterQty {display: none;}
 
 }
-
 
 // pagination
 
