--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,8 @@
 @import "include/header.scss";
 @import "include/footer.scss";
 
+@import "include/grid.scss";
+
 @import "include/login.scss";  
 
 @import "include/home.scss";
