--- a/include/base.scss
+++ b/include/base.scss
@@ -40,29 +40,27 @@ ul {list-style: none; padding-left: 0px;}
 a.button,
 a.btnDefault,
 a.lnkUyeOlmak,
-.lnkDefault:not(.lnkSifremiUnuttum) {font-weight: 600; text-align: center; background-color: $color-1; color: $color-3; border-radius: 4px; display: inline-block;
+.lnkDefault:not(.lnkSifremiUnuttum) {font-weight: 600; text-align: center; background-color: $color-1; color: $color-3; border-radius: 4px; display: inline-block;}
 
-    &.large {font-size: 18px; padding: 12px 56px;}
+.large {font-size: 18px; padding: 12px 56px;}
 
-    &.small {padding: 10px 35px;}
+.small {padding: 10px 35px;}
 
-    &.short {padding: 5px 41px;}
+.short {padding: 5px 41px;}
 
-    &.border {padding: 10px 45px; border: 1px solid $color-3; background-color: transparent;}
+.border {padding: 10px 45px; border: 1px solid $color-3; background-color: transparent $i;}
 
-    &.small,
-    &.short,
-    &.border {font-size: 14px;}
+.small,
+.short,
+.border {font-size: 14px;}
 
-    &.btnFacebookLogin {background-color: $facebook;
-    
-        @extend .large;
-    
-    }
+.btnFacebookLogin {background-color: $facebook;
 
-    &.none {background-color: transparent; font-weight: normal; color: $color-9;}
+    @extend .large;
 
 }
+
+.none {background-color: transparent; font-weight: normal; color: $color-9;}
 
 // flex
 
@@ -154,6 +152,12 @@ textarea {height: 150px; padding-top: 15px; resize: none;}
 #dvMesajSehirBilgi {
 
     @include select-box;
+
+}
+
+@mixin piece {
+
+    width: 42px $i; height: 27px; text-align: center; background-color: transparent; border-radius: 4px; border-color: $color-5; color: $color-9; font-weight: 600;
 
 }
 
