Homa Page Responsive Start

--- a/include/base.scss
+++ b/include/base.scss
@@ -196,3 +196,9 @@ textarea {height: 150px; padding-top: 15px; resize: none;}
     .ems-field {margin-bottom: 15px; position: relative;}
 
 }
+
+@media screen and (max-width: 1200px) {
+
+    .ems-container {padding-left: 20px; padding-right: 20px;}
+
+}
