--- a/include/footer.scss
+++ b/include/footer.scss
@@ -46,7 +46,7 @@
 
     ul li a{font-size: 12px; color: $color-9; font-weight: 600; line-height: 2.5;}
 
-    span {color: $color-8; font-size: 12px; line-height: 2.5; font-weight: bold;}
+    a {color: $color-8; font-size: 12px; line-height: 2.5; font-weight: bold;}
 
     .category {
 
@@ -61,5 +61,61 @@
 .footer-address {border-top: 1px solid $color-5;
 
     address {font-size: 12px; color: $color-9; min-height: 88px; max-width: 610px; font-weight: 600; font-style: normal;}  
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .main-footer {margin-top: 50px;
+
+        .menu {flex-wrap: wrap; text-align: center;
+
+            ul {display: none;}
+
+            > div {width: 100%; margin-bottom: 30px;
+            
+                &:last-child {margin-bottom: 0px;}
+            
+            }
+
+        }
+
+    }
+
+    .footer-top {
+
+        .logo,
+        .social {width: 50%;}
+
+        .logo {
+
+            img {width: 70px;}
+
+            small {font-size: 12px; font-weight: normal; align-self: center; padding-left: 3px; margin-bottom: -15px;}
+
+        }
+        
+
+        .social {
+
+            ul {justify-content: flex-end;
+            
+                li {padding-left: 15px;}
+            
+            }
+
+        }
+
+        .footer-social {min-height: 60px;}
+
+    }
+
+    .footer-bottom {padding-bottom: 15px;}
+
+    .footer-address {border-top: 0px;
+    
+        address {color: $color-2;}
+    
+    }
 
 }
