--- a/include/header.scss
+++ b/include/header.scss
@@ -267,6 +267,14 @@
 
     .list {border-left: 1px solid $color-4; border-right: 1px solid $color-4; position: relative; display: none;
 
+        .list-title {background-color: $color-1; height: 70px; align-items: center; justify-content: center; color: $color-3;
+        
+            h2 {margin: 0px; text-align: center; font-size: 20px; font-weight: 600;}
+
+            i {left: 20px; cursor: pointer;}
+        
+        }
+
         ul {list-style: none; margin: 0px;
         
             li {border-bottom: 1px solid $color-4;
@@ -327,7 +335,7 @@
 
 .sticky-header-ready {
 
-    .mod-mini-search {width: 630px; transition-delay: 0s;}
+    .mod-mini-search {width: calc(100% - 275px); transition-delay: 0s;}
 
     .member {top: 0px; transition-delay: 0.1s;}
 
@@ -336,5 +344,145 @@
 .sticky-header-animate {padding-top: 84px;
 
     .header-bottom {position: fixed; top: 0px; left: 0px; width: 100%; z-index: 2;}
+
+}
+
+@media screen and (max-width: 960px) {
+
+    .header-top .nav {display: none;}
+
+    .header-top .logo {display: block; flex-basis: 100%;}
+
+    .header-logo {width: 100px;}
+
+    .header-top .logo,
+    .header-top .nav {height: 70px;}
+
+    .member {display: none;
+
+        .ems-cart-basket span[id$='lbfKUTU_SEPET'] span {display: none;}
+
+        .mod-mini-cart {text-align: right;
+        
+            .ems-cart-piece {left: auto; right: 0px; width: 42px;}
+        
+        }
+
+    }
+
+    .header-bottom .category {position: absolute; left: 0px; top: -90px;}
+
+    .ems-page-home .header-category.activeted .list {display: none;}
+
+    .header-category .list {display: block;}
+
+    .header-category {
+
+        .title {color: $color-3; display: none;
+
+            span {display: none;}
+
+        }
+
+        .list {position: fixed; border: none;  visibility: hidden; left: -100%; top: 0px; width: 100%; height: 100vh; background-color: $color-3; z-index: 6; transition: left 0.1s ease-in;
+        
+            ul {
+
+                li {
+
+                    a {padding: 15px 20px;
+
+                        i {display: block;}
+
+                    }
+
+                }
+
+            }
+        
+        }
+
+        .list-title {display: flex;}
+
+        .list-login {display: flex; align-items: center; height: 50px; background-color: $color-2; color: $color-3; padding: 0px 20px;
+        
+            a {font-size: 14px; font-weight: 600;
+            
+                i {font-size: 22px; margin-right: 5px;
+                
+                    &::before {margin-left: 0px;}
+                
+                }
+
+            }
+        
+        }
+
+    }
+
+    .ems-login {
+
+        .login-true {display: block;}
+
+    }
+
+    .ems-logoff {
+
+        .login-false {display: block;}
+
+    }
+
+    .header-logo-wrapper {height: 70px; display: flex; justify-content: space-between; align-items: center;}
+
+    .mbHeader,
+    .mbCart {display: block; color: $color-3;}
+
+    .mbHeader {font-size: 29px;}
+
+    .mbCart {
+
+        a {font-size: 27px;}
+
+        b {left: 0px; top: 3px; width: 100%; height: 100%; font-size: 13px; font-weight: normal; display: flex; align-items: center; justify-content: center;}
+
+    }
+
+    .header-bottom .search {min-height: 70px;
+    
+        input {height: 30px;}
+    
+    }
+
+    .mod-mini-search .icon-search {font-size: 15px;}
+
+    // animation
+
+    .sticky-header-animate {padding-top: 70px;
+
+        .header-bottom {position: static;}
+
+        .header-top {position: fixed; z-index: 5; width: 100%; top: 0px; left: 0px;}
+
+    }
+
+    .sticky-header-ready {
+
+        .mod-mini-search {width: 100%;}
+
+        .member {top: -75px;}
+
+    }
+
+    .mobi-menu-ready {
+
+        .header-category.activeted .list {display: block;}
+
+    }
+
+    .mobi-menu-animate {height: 100vh; overflow: hidden;
+
+        .header-category .list {left: 0%; visibility: visible;}
+
+    }
 
 }
