--- a/style.css
+++ b/style.css
@@ -269,6 +269,11 @@ textarea {
   margin-bottom: 15px;
   position: relative; }
 
+@media screen and (max-width: 1200px) {
+  .ems-container {
+    padding-left: 20px;
+    padding-right: 20px; } }
+
 .icons, .sStylerWrp_select::after, #dvMesajSehirBilgi::after, .pb1::before, .member #validateLogin .mod-mini-login [id$='lbfUYE_SAYIN'] i::before, .member .mod-mini-cart .ems-col .cart-prd-left .icon-ico_quit::before, .page-product-list .menuKategori .sub-items::after, .urunKiyaslamaOzellik_ozellikAd::after, .urunDetay .inner-row-2 .btnFiyatDus::before, .dropdown.plugins-active > span i::after, .ems-page-cart .tabloTabBtnAdimSiparis i::before {
   font-family: "fontello";
   font-style: normal;
@@ -1222,6 +1227,26 @@ button.swiper-pagination-bullet {
     border-right: 1px solid #F3F3F3;
     position: relative;
     display: none; }
+    .header-category .list .list-title {
+      background-color: #78B657;
+      height: 70px;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      color: #FFFFFF; }
+      .header-category .list .list-title h2 {
+        margin: 0px;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 600; }
+      .header-category .list .list-title i {
+        left: 20px;
+        cursor: pointer; }
     .header-category .list ul {
       list-style: none;
       margin: 0px; }
@@ -1290,7 +1315,7 @@ button.swiper-pagination-bullet {
     margin-bottom: 0px; }
 
 .sticky-header-ready .mod-mini-search {
-  width: 630px;
+  width: calc(100% - 275px);
   -webkit-transition-delay: 0s;
   -o-transition-delay: 0s;
   transition-delay: 0s; }
@@ -1309,6 +1334,159 @@ button.swiper-pagination-bullet {
     left: 0px;
     width: 100%;
     z-index: 2; }
+
+@media screen and (max-width: 960px) {
+  .header-top .nav {
+    display: none; }
+  .header-top .logo {
+    display: block;
+    -webkit-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%; }
+  .header-logo {
+    width: 100px; }
+  .header-top .logo,
+  .header-top .nav {
+    height: 70px; }
+  .member {
+    display: none; }
+    .member .ems-cart-basket span[id$='lbfKUTU_SEPET'] span {
+      display: none; }
+    .member .mod-mini-cart {
+      text-align: right; }
+      .member .mod-mini-cart .ems-cart-piece {
+        left: auto;
+        right: 0px;
+        width: 42px; }
+  .header-bottom .category {
+    position: absolute;
+    left: 0px;
+    top: -90px; }
+  .ems-page-home .header-category.activeted .list {
+    display: none; }
+  .header-category .list {
+    display: block; }
+  .header-category .title {
+    color: #FFFFFF;
+    display: none; }
+    .header-category .title span {
+      display: none; }
+  .header-category .list {
+    position: fixed;
+    border: none;
+    visibility: hidden;
+    left: -100%;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    background-color: #FFFFFF;
+    z-index: 6;
+    -webkit-transition: left 0.1s ease-in;
+    -o-transition: left 0.1s ease-in;
+    transition: left 0.1s ease-in; }
+    .header-category .list ul li a {
+      padding: 15px 20px; }
+      .header-category .list ul li a i {
+        display: block; }
+  .header-category .list-title {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .header-category .list-login {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 50px;
+    background-color: #30373B;
+    color: #FFFFFF;
+    padding: 0px 20px; }
+    .header-category .list-login a {
+      font-size: 14px;
+      font-weight: 600; }
+      .header-category .list-login a i {
+        font-size: 22px;
+        margin-right: 5px; }
+        .header-category .list-login a i::before {
+          margin-left: 0px; }
+  .ems-login .login-true {
+    display: block; }
+  .ems-logoff .login-false {
+    display: block; }
+  .header-logo-wrapper {
+    height: 70px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .mbHeader,
+  .mbCart {
+    display: block;
+    color: #FFFFFF; }
+  .mbHeader {
+    font-size: 29px; }
+  .mbCart a {
+    font-size: 27px; }
+  .mbCart b {
+    left: 0px;
+    top: 3px;
+    width: 100%;
+    height: 100%;
+    font-size: 13px;
+    font-weight: normal;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .header-bottom .search {
+    min-height: 70px; }
+    .header-bottom .search input {
+      height: 30px; }
+  .mod-mini-search .icon-search {
+    font-size: 15px; }
+  .sticky-header-animate {
+    padding-top: 70px; }
+    .sticky-header-animate .header-bottom {
+      position: static; }
+    .sticky-header-animate .header-top {
+      position: fixed;
+      z-index: 5;
+      width: 100%;
+      top: 0px;
+      left: 0px; }
+  .sticky-header-ready .mod-mini-search {
+    width: 100%; }
+  .sticky-header-ready .member {
+    top: -75px; }
+  .mobi-menu-ready .header-category.activeted .list {
+    display: block; }
+  .mobi-menu-animate {
+    height: 100vh;
+    overflow: hidden; }
+    .mobi-menu-animate .header-category .list {
+      left: 0%;
+      visibility: visible; } }
 
 .main-footer {
   margin-top: 90px; }
@@ -1356,7 +1534,7 @@ button.swiper-pagination-bullet {
     color: #9B9B9B;
     font-weight: 600;
     line-height: 2.5; }
-  .footer-bottom span {
+  .footer-bottom a {
     color: #4A4A4A;
     font-size: 12px;
     line-height: 2.5;
@@ -1378,6 +1556,50 @@ button.swiper-pagination-bullet {
     max-width: 610px;
     font-weight: 600;
     font-style: normal; }
+
+@media screen and (max-width: 768px) {
+  .main-footer {
+    margin-top: 50px; }
+    .main-footer .menu {
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      text-align: center; }
+      .main-footer .menu ul {
+        display: none; }
+      .main-footer .menu > div {
+        width: 100%;
+        margin-bottom: 30px; }
+        .main-footer .menu > div:last-child {
+          margin-bottom: 0px; }
+  .footer-top .logo,
+  .footer-top .social {
+    width: 50%; }
+  .footer-top .logo img {
+    width: 70px; }
+  .footer-top .logo small {
+    font-size: 12px;
+    font-weight: normal;
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    align-self: center;
+    padding-left: 3px;
+    margin-bottom: -15px; }
+  .footer-top .social ul {
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end; }
+    .footer-top .social ul li {
+      padding-left: 15px; }
+  .footer-top .footer-social {
+    min-height: 60px; }
+  .footer-bottom {
+    padding-bottom: 15px; }
+  .footer-address {
+    border-top: 0px; }
+    .footer-address address {
+      color: #30373B; } }
 
 .ems-grid-default > div {
   position: relative;
@@ -2295,6 +2517,52 @@ button.swiper-pagination-bullet {
     color: #FFFFFF;
     font-weight: 600; }
 
+@media screen and (max-width: 960px) {
+  .page-home {
+    padding-left: 0px; }
+    .page-home > .slider,
+    .page-home > .pay-type {
+      margin-left: -20px;
+      margin-right: -20px; }
+  .main-slider h3 {
+    font-size: 24px;
+    max-width: 400px; }
+  .main-slider > .swiper-pagination-bullets {
+    bottom: 20px; }
+  .pay-type-list {
+    padding: 25px 20px; }
+  .home-content {
+    padding-left: 0px; }
+  .background-banner-list .background-banner-item {
+    width: calc(50% - 10px); } }
+
+@media screen and (max-width: 768px) {
+  .pay-type-list {
+    padding: 6px 20px; }
+    .pay-type-list > div {
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      text-align: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
+      .pay-type-list > div::before {
+        margin-right: 0px;
+        margin-bottom: 0px; }
+  .background-banner-list {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: calc(100% + 40px);
+    margin-left: -20px; }
+    .background-banner-list .background-banner-item {
+      width: 100%;
+      margin-bottom: 30px; }
+      .background-banner-list .background-banner-item:last-child {
+        margin-bottom: 0px; } }
+
 .widget-product {
   margin: 60px 0px 40px 0px; }
 
@@ -2663,6 +2931,21 @@ button.swiper-pagination-bullet {
   font-weight: 600;
   color: #9B9B9B;
   text-decoration: underline; }
+
+@media screen and (max-width: 960px) {
+  .widget-product {
+    padding-left: 0px;
+    margin: 40px 0px 0px 0px; }
+  .product-item {
+    padding: 0px; } }
+
+@media screen and (max-width: 768px) {
+  .no-swiper .swiper-wrapper .swiper-slide {
+    width: calc(50% - 5px); }
+  .swiper-title {
+    text-align: center; }
+  .product-item .ems-prd-name a {
+    font-size: 14px; } }
 
 .page-detail .detail-content {
   width: calc(100% - 391px);
